Correct current post nav height on mobile widths.

--- a/style.css
+++ b/style.css
@@ -1798,7 +1798,7 @@ Content
     #current_posts_nav a.three_in_current_posts_nav {
       display: block;
       float: none;
-      height: 7rem;
+      height: 9rem;
       margin-right: 0;
       width: auto;
     }
